app/scss/0.4.0/dataset.scss
.dataset-details {
  font-family: $font-family-sans-serif;
  font-size: 14px;
  font-weight: 300;
  margin: 2px 0;

  &.muted {
    color: #B1B1B1
  }

  &.light {
    color: #ffffff;
  }

  &.small {
    font-size: 11px;
    
    .dataset-details-item {
      margin-right: 10px;
    }
  }

  .dataset-details-item {
    margin-right: 24px;
  }
}

.title-bar {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%;
  flex-flow: nowrap;

  .left {
    display: flex;
    align-items: flex-start;
    min-width: 0;
    float: unset;
    overflow: hidden;
    white-space: nowrap;

    &.expanded {
      cursor: pointer;
    }

    &.expandable {
      cursor: pointer;
    }
    
    .title-bar-icon {
      margin-top: 5px;
      margin-right: 10px;
    }

    .title-bar-title {
      font-size: 24px;
      font-weight: 900;
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow-x: hidden;

      &.expanded {
        white-space: normal;
      }
    }
  }
  .right {
    flex-grow: 1;
    flex-Basis: 40px;
    float: unset;
  }
}

.commit-preview {
  width: 100%;
  font-family: 'Rubik';
  font-size: 14px;
  line-height: 17px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #E8EDF2;
  border-radius: 3px;
  padding: 10px 20px;

  .author-time {
    font-weight: 500;
  }

  .title {
    font-weight: 300;
  }
}

.structure {
  > div {
    padding: 15px;
  }
}

.overview {
  width: 100%;
  #overview {
    margin-top: 20px;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    .description {
      max-width: 600px;
      padding-right: 20px;
    }
  }
  .expandable {
    cursor: pointer;
  }
}

.dataset {
  overflow-x:auto;
  padding: 20px;
  width: 100%;

  > div {
    margin-bottom: 20px;
  }
}

.table-container {
  $cell-border: 1px solid #D8D8D8;
  $header-background-color: #f0f0f0;

  overflow: scroll !important;
  height: 100%;

  table {
    table-layout: fixed;
    min-width: 100%;

    td, th {
      white-space: nowrap;
      border-top-width: 0;
      border-left-width: 0;
      border-right: $cell-border;
      border-bottom: $cell-border;
      padding: 2px 6px;
      font-size: 14px;
      font-weight: 300;
    }

    tr {
      border-left: none;
    }

    th {
      border-left: $cell-border;
      font-weight: 500;
    }

    td:first-child, th:first-child {
      margin-left: -2px;
      text-align: center;
      border-left: none;
      color: #969696;
      font-weight: 500;
      padding: 3px 1px;
    }

    td:last-child, th:last-child {
      border-right: none;
    }
  }
}

#json-preview-container {
  height: 500px;
  width: 100%;

  .CodeMirror {
    height: 500px;
  }
}

